namespace lab25.Loggers;

public interface ILogger
{
    void Log(string message);
}
