namespace lab25.Observers;

public interface IObserver
{
    void Update(string message);
}
