namespace lab25.Strategies;

public interface IDataProcessorStrategy
{
    string Process(string data);
}
